--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                        </p>
 
 
-                    <!-- <a href="/assets/file/Parham_ZM_CV.pdf">
+                    <a href="D:\Education\Apply\Website\assets\CV">
                         <i class="fa fa-download"></i><font size="4"><b> Download my CV here!</b></font></a>
-                     </br></br></br> -->
+                     </br></br></br>
                     
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/shaghayegh-m/" title="Linkedin"><i class="fab fa-linkedin-in" title="Linkedin"></i></a>
@@ -159,7 +159,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Internship at <a href="https://skinstemcell.tums.ac.ir/">Skin and Stem Cell Research Center (SSRC)</a></h3>
                         <p><i class="fas fa-thumbtack"></i>  Researched on eye drops and tissue glues made by umbilical cord stem cells.</p>
-                        <p><i class="fas fa-thumbtack"></i>  Participated in the culturing of umbilical cord stem cells, adhering to strict protocols for maintaining cell viability and health.</p>
+                        <p><i class="fas fa-thumbtack"></i>  Participated in the culturing of umbilical cord stem cells, adhering to strict protocols for maintaining cell viability.</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Oct. - Dec. 2022</span></div>
                 </div>
@@ -234,7 +234,7 @@
       <div class="resume-content mr-auto">
         <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/genetic-engineeringpptx-260412445">Genetic Engineering</a>
         </a></b></h3>
-        <div class="subheading mb-3">In-course exercise</div>
+        <div class="subheading mb-3">Genetic Engineering in-course exercise</div>
         <p><i class="fas fa-arrow-circle-right"></i>  Conducted research on recombinant vaccines.</p>
         <p><i class="fas fa-arrow-circle-right"></i>  Explored methods of gene therapy and assessed their efficiency for treating cancer and inherited diseases.</p>
         <!-- </br> -->
@@ -251,9 +251,9 @@
       <div class="resume-content mr-auto">
         <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/radioactive-matterialspptx">Radioactive Materials and their Effects on Biological Systems</a>
         </a></b></h3>
-        <div class="subheading mb-3">In-course exercise</div>
+        <div class="subheading mb-3">Radiobiology in-course exercise</div>
         <p><i class="fas fa-arrow-circle-right"></i>  Conducted research on ionizing radiation and its effects on human organs.</p>
-        <p><i class="fas fa-arrow-circle-right"></i>  Researched ways to reduce radioactive effects on living things</p>
+        <p><i class="fas fa-arrow-circle-right"></i>  Explored methods for reducing the effects of radiation on living organisms.</p>
         <!-- </br> -->
         <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
       </div>
@@ -264,10 +264,10 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
-        <h3 class="mb-0"><b>• Molecular Biology by Robert F. Weaver, 5th ed book
+        <h3 class="mb-0"><b>• Molecular Biology book by Robert F. Weaver, 5th edition 
         </a></b></h3>
         <div class="subheading mb-3">Translation of the book to Persian</div>
-        <p><i class="fas fa-arrow-circle-right"></i>  Participated in translating chapter 9 and 10.</p>
+        <p><i class="fas fa-arrow-circle-right"></i>  Participated in translating chapters 9 and 10.</p>
         <!-- </br> -->
         <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
       </div>
@@ -278,10 +278,10 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
-        <h3 class="mb-0"><b>• Molecular Medicine: Genomics to Personalized Healthcare by R. J. Trent, 4th ed book
+        <h3 class="mb-0"><b>• Molecular Medicine: Genomics to Personalized Healthcare book by R. J. Trent, 4th edition
         </a></b></h3>
         <div class="subheading mb-3">Translation of the book to Persian</div>
-        <p><i class="fas fa-arrow-circle-right"></i>  Participated in translating chapter 3 and 4.</p>
+        <p><i class="fas fa-arrow-circle-right"></i>  Participated in translating chapters 3 and 4.</p>
         <!-- </br> -->
         <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
       </div>
@@ -294,7 +294,7 @@
       <div class="resume-content mr-auto">
         <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/covid19-vaccinespptx-260414830">Covid-19 Vaccines and their Mechanisms</a>
         </a></b></h3>
-        <div class="subheading mb-3">In-course exercise</div>
+        <div class="subheading mb-3">Virology in-course exercise</div>
         <p><i class="fas fa-arrow-circle-right"></i> Studied the mechanisms underlying various Covid-19 vaccine platforms, including mRNA-based vaccines, viral vector vaccines, and protein subunit vaccines.</p>
         <p><i class="fas fa-arrow-circle-right"></i> Gained insights into the stages of vaccine development, from preclinical research to regulatory approval and distribution.</p>
         <!-- </br> -->
@@ -323,7 +323,7 @@
                 <div class="resume-content mr-auto">
                   <h3 class="mb-0">• B.Sc.</h3>
                 </br>
-                  <p><i class="fas fa-arrow-circle-right"></i> Cellular and Molecular Biology 1 & 2 (20), Genetics (20), Molecular Genetics (20), Genetic Engineering (20), Virology (20), Evolutionary Biology (20), Metabolism Biochemistry (20), Bioinformatics (20), Biostatistics (19.75), Microbial Biology (19.5), Immunology (18.5), Histology (18), Nanobiotechnology (17.75)</a>. 
+                  <p><i class="fas fa-arrow-circle-right"></i> Cellular and Molecular Biology 1 & 2 (20/20), Genetics (20/20), Molecular Genetics (20/20), Genetic Engineering (20/20), Virology (20/20), Evolutionary Biology (20/20), Metabolism Biochemistry (20/20), Bioinformatics (20/20), Biostatistics (19.75/20.00), Microbial Biology (19.5/20.00), Immunology (18.5/20.00), Histology (18/20.00), Nanobiotechnology (17.75/20.00)</a>. 
                   </br>
                 </p>
                 </div>
