--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                        </p>
 
 
-                    <a href="D:\Education\Apply\Website\assets\CV">
+                    <a href="/file/Shaqayeq-Mahmoudi-CV.pdf">
                         <i class="fa fa-download"></i><font size="4"><b> Download my CV here!</b></font></a>
                      </br></br></br>
                     
