--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <a href="http://usc.ac.ir/en">University of Science and Culture</a>, Tehran, Iran <p> <i class="fas fa-mobile-alt"></i> (+98) 933-798-6217  </p>
                     <!-- </br>  -->
                     <!-- <b>   .   </b> -->
-                    <a href="shaqayeqmhmoudi@gmail.com"><i class="far fa-envelope"></i> shaqayeqmhmoudi@gmail.com</a>
+                    <a href="mailto:shaqayeqmhmoudi@gmail.com"><i class="far fa-envelope"></i> shaqayeqmhmoudi@gmail.com</a>
                     <!-- <div class="subheading mb-5">
                         3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
                         <a href="mailto:p.zilouchian@gmail.com">p.zilouchian@gmail.com</a> -->
