--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                       <div class="flex-grow-1">
                           <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Internship at <a href="https://nbml.ir/en">National Brain Mapping Lab (NBML)</a></h3>
                           <p><i class="fas fa-thumbtack"></i>  Prepared subjects for EEG sessions(electrode placement, impedance checking, and adjusting the eye tracker).</p>
-                          <p><i class="fas fa-thumbtack"></i>  Ensured data quality through meticulous artifact identification and rejection.</p>
+                          <p><i class="fas fa-thumbtack"></i>  Identified and rejected artifacts meticulously to ensure data quality.</p>
                           <p><i class="fas fa-thumbtack"></i>  Runned cognitive tests on subjects.</p>
                       </div>
                       <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Aug. 2023</span></div>
@@ -158,7 +158,7 @@
                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Internship at <a href="https://skinstemcell.tums.ac.ir/">Skin and Stem Cell Research Center (SSRC)</a></h3>
-                        <p><i class="fas fa-thumbtack"></i>  Researched on eye drops and tissue glues made by umbilical cord stem cells.</p>
+                        <p><i class="fas fa-thumbtack"></i>  Studied eye drops and tissue glues produced from umbilical cord stem cells.p>
                         <p><i class="fas fa-thumbtack"></i>  Participated in the culturing of umbilical cord stem cells, adhering to strict protocols for maintaining cell viability.</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Oct. - Dec. 2022</span></div>
