--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z0E4NZ19WL"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BDS1L393NK"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-Z0E4NZ19WL');
+  gtag('config', 'G-BDS1L393NK');
 </script>
 
         <meta charset="utf-8" />
