--- a/index.html
+++ b/index.html
@@ -242,6 +242,21 @@
     
     <h2><img src="assets/img/project-icon.jpg" alt="projects" width="60" height="60" style="vertical-align:middle;margin-bottom:15px; margin-left: -25px;"><b> Academic Projects</b></h2>
     <!-- <h2 class="mb-5">Academic Projects</h2> -->
+
+    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+      <div class="resume-content mr-auto">
+        <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/srrnabased-cancer-vaccinespptx">Radioactive Materials and their Effects on Biological Systems</a>
+        </a></b></h3>
+        <div class="subheading mb-3">srRNA‑based Cancer Vaccines</div>
+        <p><i class="fas fa-arrow-circle-right"></i>  Explored various methods of cancer vaccine development.</p>
+        <p><i class="fas fa-arrow-circle-right"></i>  Conducted research on self‑replicating RNA cancer vaccine types, with a focus on therapeutic vaccines targeting HPV.</p>
+        <!-- </br> -->
+        <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
+      </div>
+      <!-- <div class="resume-date text-md-right"> -->
+      <!-- </div> -->
+    </div>
+
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
         <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/genetic-engineeringpptx-260412445">Genetic Engineering</a>
@@ -256,20 +271,6 @@
           <!-- <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> 2021</span></div> -->
           <div class="resume-date text-md-right">
           </div>
-      <!-- </div> -->
-    </div>
-
-    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-      <div class="resume-content mr-auto">
-        <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/radioactive-matterialspptx">Radioactive Materials and their Effects on Biological Systems</a>
-        </a></b></h3>
-        <div class="subheading mb-3">Radiobiology in-course exercise</div>
-        <p><i class="fas fa-arrow-circle-right"></i>  Conducted research on ionizing radiation and its effects on human organs.</p>
-        <p><i class="fas fa-arrow-circle-right"></i>  Explored methods for reducing the effects of radiation on living organisms.</p>
-        <!-- </br> -->
-        <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
-      </div>
-      <!-- <div class="resume-date text-md-right"> -->
       <!-- </div> -->
     </div>
 
