--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Internship at <a href="https://skinstemcell.tums.ac.ir/">Skin and Stem Cell Research Center (SSRC)</a></h3>
-                        <p><i class="fas fa-thumbtack"></i>  Studied eye drops and tissue glues produced from umbilical cord stem cells.p>
+                        <p><i class="fas fa-thumbtack"></i>  Studied eye drops produced from Umbilical Cord Blood.</p>
                         <p><i class="fas fa-thumbtack"></i>  Participated in the culturing of umbilical cord stem cells, adhering to strict protocols for maintaining cell viability.</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Oct. - Dec. 2022</span></div>
@@ -224,7 +224,7 @@
 <div class="resume-content mr-auto">
     <h3 class="mb-0">  <i class="fa-solid fa-language"></i>  Languages</h3>
 </br>
-    <p class="lead mb-5">  <i class="far fa-hand-point-right"></i>  English: TOEFL: (Fluent) TOEFL to be taken in November</p>
+    <p class="lead mb-5">  <i class="far fa-hand-point-right"></i>  English: TOEFL: Overall 97(R:25 - L:27 - S:23 - W:22)</p>
     <p class="lead mb-5">  <i class="far fa-hand-point-right"></i>  Persian (Native)</p>
 </div>
 </div>
@@ -245,9 +245,9 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
-        <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/srrnabased-cancer-vaccinespptx">Radioactive Materials and their Effects on Biological Systems</a>
+        <h3 class="mb-0"><b>• <a href="\href{https://www.slideshare.net/shaqayeqmahmoudi/srrnabased-cancer-vaccinespptx-b6b8">srRNA‑based Cancer Vaccines</a>
         </a></b></h3>
-        <div class="subheading mb-3">srRNA‑based Cancer Vaccines</div>
+        <div class="subheading mb-3">Genetic in-course exercise</div>
         <p><i class="fas fa-arrow-circle-right"></i>  Explored various methods of cancer vaccine development.</p>
         <p><i class="fas fa-arrow-circle-right"></i>  Conducted research on self‑replicating RNA cancer vaccine types, with a focus on therapeutic vaccines targeting HPV.</p>
         <!-- </br> -->
