--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <!-- <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
                     <p class="lead mb-5"> I am Shaqayeq Mahmoudi, holding a Bachelor's in Cellular and Molecular Biology from the <a href="http://usc.ac.ir/en">University of Science and Culture</a>. My academic journey has driven me to explore the intricacies of biology and ignited my passion for advancing in Neuroscience. With an insatiable curiosity about the human brain, I've diligently built my expertise in neuroscience. This involved attending seminars, online courses, and internships to stay updated on the latest developments in the field and gain hands-on experience. Moreover, my foundation in biology has been instrumental in acquiring substantial proficiency in laboratory techniques.
 
-                        My research interests are <b>Neuropsychiatric Disease</b>, <b>Neurodegenerative Disease</b>, <b>Neurogenetics</b>, <b>Reward Circuit</b>, <b>Visual Perception</b>, and <b>learning & Memory</b>.
+                        My research interests are <b>Neuropsychiatric Disease</b>, <b>Neurodegenerative Disease</b>, <b>Neurogenetics</b>, <b>Reward Circuit</b>, <b>Sleep Disorder</b>, and <b>learning & Memory</b>.
                          <!-- I am mostly interested in <b>Robotics</b>, <b>Machine Learning</b>, and <b>Parallel Processing</b>.</p> -->
                        </p>
 
@@ -171,7 +171,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Internship at <a href="https://skinstemcell.tums.ac.ir/">Skin and Stem Cell Research Center (SSRC)</a></h3>
                         <p><i class="fas fa-thumbtack"></i>  Studied eye drops produced from Umbilical Cord Blood.</p>
-                        <p><i class="fas fa-thumbtack"></i>  Participated in the culturing of umbilical cord stem cells, adhering to strict protocols for maintaining cell viability.</p>
+                        <p><i class="fas fa-thumbtack"></i>  Participated in the culturing of stem cells, adhering to strict protocols for maintaining cell viability.</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Oct. - Dec. 2022</span></div>
                 </div>
