--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@
                       </div>
                       <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Aug. 2023</span></div>
                   </div>
-                  <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Internship at <a href="https://skinstemcell.tums.ac.ir/">Skin and Stem Cell Research Center (SSRC)</a></h3>
                         <p><i class="fas fa-thumbtack"></i>  Studied eye drops produced from Umbilical Cord Blood.</p>
                         <p><i class="fas fa-thumbtack"></i>  Participated in the culturing of stem cells, adhering to strict protocols for maintaining cell viability.</p>
-                    </div>
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Oct. - Dec. 2022</span></div>
-                </div>
+                    </div> -->
+                    <!-- <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Oct. - Dec. 2022</span></div>
+                </div> -->
                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                       <div class="flex-grow-1">
                         <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Teaching Assistant</h3>
