--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                       <div class="flex-grow-1">
                           <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Internship at <a href="https://nbml.ir/en">National Brain Mapping Lab (NBML)</a></h3>
-                          <p><i class="fas fa-thumbtack"></i>  Prepared subjects for EEG sessions(electrode placement, impedance checking, and adjusting the eye tracker).</p>
-                          <p><i class="fas fa-thumbtack"></i>  Identified and rejected artifacts meticulously to ensure data quality.</p>
-                          <p><i class="fas fa-thumbtack"></i>  Runned cognitive tests on subjects.</p>
+                          <p><i class="fas fa-thumbtack"></i>  Recorded EEG data from subjects and analyzed it using EEGLAB to investigate neurological responses.</p>
+                          <p><i class="fas fa-thumbtack"></i>  Gained a deeper understanding of brain regions and their functions through the analysis of fMRI data.</p>
+                          <p><i class="fas fa-thumbtack"></i>  Prepared subjects for EEG sessions (Electrode placement, impedance checking, and adjusting the eye tracker).</p>
                       </div>
-                      <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Aug. 2023</span></div>
+                      <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Jul. - Sep. 2023</span></div>
                   </div>
 
 
@@ -242,7 +242,7 @@
                         <p><i class="fas fa-thumbtack"></i>  Cellular and Molecular Biology2 course.</p>
                         <p><i class="fas fa-thumbtack"></i>  Biostatistics course.</p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021- Jan. 2023</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021 - Jan. 2023</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="flex-grow-1"> 
@@ -283,7 +283,7 @@
       <div class="resume-content mr-auto">
           <h3 class="mb-0"><i class="fa-solid fa-flask"></i>  Laboratory Techniques</h3>
       </br>
-          <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> PCR/qPCR, DNA/RNA Extraction, Recombinant DNA, Bacterial Culture, Western Blotting, Spectrophotometry, Gel Electrophoresis, Microarray, Primer Design, Buffer Preparation</p>
+          <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> PCR/qPCR, DNA/RNA Extraction, Recombinant DNA, Immunofluorescence, Bacterial Culture, Western Blotting, Spectrophotometry, Gel Electrophoresis, Microarray, Primer Design, Buffer Preparation</p>
       </div>
   </div>
   
@@ -450,6 +450,7 @@
                   <h3 class="mb-0">• Online</h3>
                 </br>
                   <p><i class="fas fa-arrow-circle-right"></i> <b>“<a href="https://www.dataquest.io/">Data Analyst in R</a>”</b> - Offered by Dataquest</p>
+                  <p><i class="fas fa-arrow-circle-right"></i> <b>“<a href="">Fundamental Neuroscience for Neuroimaging</a>”</b> - Offered by National Brain Mapping Lab (NBML)</p>
                   <p><i class="fas fa-arrow-circle-right"></i> <b>“Basic, Clinical & Cognitive Neuroscience Diploma”</b> - Offered by <a href="https://www.neurotract.com/">Neurotract</a>  <b>(<a href="https://drive.google.com/file/d/1sJ7pRZaWcefrvGmF_bsrgwAqpiRS-iMS/view?usp=drive_link">Certificate</a>)</b></p>
                   <p><i class="fas fa-arrow-circle-right"></i> <b>“<a href="https://www.edx.org/">Fundamentals of Neuroscience Parts 1 & 2</a>”</b> - Offered by edX</p>
                 <i class="fas fa-arrow-circle-right"></i> <b>“Elementary Steps toward AI”</b> - Offered by <a href="http://en.tums.ac.ir/en">Tehran University of Medical Science(TUMS)</a>
@@ -475,7 +476,8 @@
             </a></b></h3>
           </br>
             <p><i class="fas fa-arrow-circle-right"></i>  <b>“International Summer School on Genome Editing”</b> - <a href="https://www.royan.org/en/">Royan Institute</a>  <b>(<a href="https://drive.google.com/file/d/1oI-XlWLDPWtHbpW-wupj9nNkkqVAbrm3/view?usp=drive_link">Certificate</a>)</b></p>
-            <p><i class="fas fa-arrow-circle-right"></i>  <b>“BCI \& Neurotechnology Spring School”</b> - <a href="https://www.gtec.at/">g.tec medical engineering GmbH</a>  <b>(<a href="https://drive.google.com/file/d/1ayNEt0P25ypC0TPP7EXigRCUfvC0ZlH8/view?usp=drive_link">Certificate</a>)</b></p>
+            <p><i class="fas fa-arrow-circle-right"></i>  <b>“BCI \& Neurotechnology Spring School”</b> - <a href="https://ut.ac.ir/en/">University of Tehran</a>  <b>(<a href="https://drive.google.com/file/d/1ayNEt0P25ypC0TPP7EXigRCUfvC0ZlH8/view?usp=drive_link">Certificate</a>)</b></p>
+            <p><i class="fas fa-arrow-circle-right"></i>  <b>“Visual Neuroscience”</b> - <a href="https://www.gtec.at/">g.tec medical engineering GmbH</a>  <b>(<a href="https://drive.google.com/file/d/1h9-YoB8uCycD2LUgiM3qAxlhJCmByqHs/view?usp=drive_link">Certificate</a>)</b></p>
             <p><i class="fas fa-arrow-circle-right"></i>  <b>“Second International and Forth National CRISPR Symposium”</b> - <a href="http://www.nigeb.ac.ir/web/en/home">NIGBE</a>  <b>(<a href="https://drive.google.com/file/d/1MTDKzTojaP8_pFDAoFAKYNV9bDF1Z5zE/view?usp=drive_link">Certificate</a>)</b></p>
             <p><i class="fas fa-arrow-circle-right"></i>  <b>“Cryobiology in Organs and Sexual Samples”</b> - <a href="https://www.royan.org/en/">Royan International Education Center(RIEC)</a>  <b>(<a href="https://drive.google.com/file/d/1nWctG5_0Mmu2209-qIxrPwfD8M5i7EcU/view?usp=drive_link">Certificate</a>)</b></p>
             <p><i class="fas fa-arrow-circle-right"></i>  <b> “mRNA Technology in Research and Medicine”</b> - <a href="https://biologyevents.ir/">Iranian Biologists Union</a>  <b>(<a href="https://drive.google.com/file/d/116M8TWNDlVTZUphycxs2R7VjzAzhy4ab/view?usp=drive_link">Certificate</a>)</b></p>
