--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <h3 class="mb-0"><b>• <a>Prevalence of AZF Microdeletions in Men with Oligo- or Azoospermia: A Retrospective Study at the Royan Institute (In  Preparation)</a>
                     </a></b></h3>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Aug. 2024 - Present</span></div>
-                    <div class="subheading mb-3">Shaghayegh Mahmoudi, <a href="https://www.researchgate.net/profile/Hesamoddin-Sajadi">Dr. Hesamoddin Sajadi</a> , <a href="https://scholar.google.com/citations?user=7vX9bV4AAAAJ&hl=en">Dr. Reza Omani-Samani</a></div>
+                    <div class="subheading mb-3">Sh. Mahmoudi, <a href="https://www.researchgate.net/profile/Hesamoddin-Sajadi">Dr. Hesamoddin Sajadi</a> , <a href="https://scholar.google.com/citations?user=7vX9bV4AAAAJ&hl=en">Dr. Reza Omani-Samani</a></div>
                     <!-- </br> -->
                     <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
                   </div>
