--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                        </p>
 
 
-                    <a href="file/Shaqayeq-Mahmoudi-CV.pdf">
+                    <!-- <a href="file/Shaqayeq-Mahmoudi-CV.pdf"> -->
+                      <a href="file/Shaqayeq-Mahmoudi-CV.pdf">
                         <i class="fa fa-download"></i><font size="4"><b> Download my CV here!</b></font></a>
                      </br></br></br>
                     
@@ -237,9 +238,9 @@
                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Research Assistant at <a href="https://www.royan.org/en/">Royan Institute</a></h3>
-                        <p><i class="fas fa-thumbtack"></i> Cultured stem cells and facilitated their differentiation into dopaminergic progenitors to support neurological research developments.</p>
-                        <p><i class="fas fa-thumbtack"></i> Analyzed gene expression using PCR and qPCR techniques, essential for quantifying specific genetic markers in our studies.</p>
-                        <p><i class="fas fa-thumbtack"></i> Conducted immunocytochemical analyses using antibodies to visualize and study protein distributions and interactions in cellular models.</p>
+                        <p><i class="fas fa-thumbtack"></i> Cultured and differentiated stem cells into dopaminergic progenitors to advance therapeutic research in neurodegenerative diseases.</p>
+                        <p><i class="fas fa-thumbtack"></i> Performed precise gene expression analysis using PCR and qPCR techniques, ensuring high accuracy in quantifying genetic markers.</p>
+                        <p><i class="fas fa-thumbtack"></i> Executed immunocytochemical analyses withtargeted antibodies, providing clear visualization of protein interactions critical to understanding cellular mechanisms.</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Jul. 2024-Present</span></div>
                 </div>
@@ -247,12 +248,15 @@
 
                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                       <div class="flex-grow-1">
-                          <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Internship at <a href="https://nbml.ir/en">National Brain Mapping Lab (NBML)</a></h3>
-                          <p><i class="fas fa-thumbtack"></i>  Recorded EEG data from subjects and analyzed it using EEGLAB to investigate neurological responses.</p>
-                          <p><i class="fas fa-thumbtack"></i>  Gained a deeper understanding of brain regions and their functions through the analysis of fMRI data.</p>
-                          <p><i class="fas fa-thumbtack"></i>  Prepared subjects for EEG sessions (Electrode placement, impedance checking, and adjusting the eye tracker).</p>
+                          <h3 class="mb-0"><i class="fas fa-laptop-code"></i>   Biomedical Data Acquisition Specialist & Research Assistant at <a href="https://nbml.ir/en">National Brain Mapping Lab (NBML)</a></h3>
+                          <p><i class="fas fa-thumbtack"></i>  Collaborated on a neurocognitive research project focused on understanding reward processing, dopaminergic responses, and error monitoring within the brain’s decision‑making mechanisms.</p>
+                          <p><i class="fas fa-thumbtack"></i>  EEG and FMRI experiment task designing with Psychtoolbox.</p>
+                          <p><i class="fas fa-thumbtack"></i>  Acquired high‑density EEG signals (32 to 128 channels) across various setups, including simultaneous EEG‑fMRI, EEG‑TMS, EEG‑EMG, EEG‑VR, and EEG‑EOG sessions.</p>
+                          <p><i class="fas fa-thumbtack"></i>  Familiar with various devices such as BrainProducts, g.HIAMP, g.USBAMP and g.NAUTILUS PRO.</p>
+                          <p><i class="fas fa-thumbtack"></i>  Implemented and adjusted various Simulinks on MATLAB for collecting EEG data through g.tec devices.</p>
+
                       </div>
-                      <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Jul. - Sep. 2023</span></div>
+                      <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep 2022. - Sep. 2023</span></div>
                   </div>
 
 
@@ -264,6 +268,18 @@
                     </div> -->
                     <!-- <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Oct. - Dec. 2022</span></div>
                 </div> -->
+
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                    <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Teaching Assistant at <a href="http://usc.ac.ir/en">the University of Science and Culture</a></h3>
+                    <p><i class="fas fa-thumbtack"></i>  Cellular and Molecular Biology2 course.</p>
+                    <p><i class="fas fa-thumbtack"></i>  Biostatistics course.</p>
+                </div>
+                <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021 - Jan. 2023</span></div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="flex-grow-1"> 
+
                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                       <div class="flex-grow-1">
                         <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Teaching Assistant at <a href="http://usc.ac.ir/en">the University of Science and Culture</a></h3>
