--- a/index.html
+++ b/index.html
@@ -271,11 +271,11 @@
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="flex-grow-1">
-                    <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Teaching Assistant at <a href="http://usc.ac.ir/en">the University of Science and Culture</a></h3>
-                    <p><i class="fas fa-thumbtack"></i>  Cellular and Molecular Biology2 course.</p>
-                    <p><i class="fas fa-thumbtack"></i>  Biostatistics course.</p>
+                    <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Teaching Assistant at <a href="https://www.royan.org/en">Royan Institute</a></h3>
+                    <p><i class="fas fa-thumbtack"></i>  Genetic Engineering course (Chief T.A.) </p>
+                    <p><i class="fas fa-thumbtack"></i>  Bioethics course (Chief T.A.)</p>
                 </div>
-                <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021 - Jan. 2023</span></div>
+                <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2024 - Present</span></div>
             </div>
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
               <div class="flex-grow-1"> 
@@ -284,7 +284,7 @@
                       <div class="flex-grow-1">
                         <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Teaching Assistant at <a href="http://usc.ac.ir/en">the University of Science and Culture</a></h3>
                         <p><i class="fas fa-thumbtack"></i>  Cellular and Molecular Biology2 course.</p>
-                        <p><i class="fas fa-thumbtack"></i>  Biostatistics course.</p>
+                        <p><i class="fas fa-thumbtack"></i>  Genetics course.</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021 - Jan. 2023</span></div>
                 </div>
@@ -359,11 +359,42 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
+        <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/slideshow/huntington-disease-and-it-s-related-genes/271122132">Huntington's Disease and Its Related Genes</a>
+        </a></b></h3>
+        <div class="subheading mb-3">System Biology in‑course exercise</div>
+        <p><i class="fas fa-arrow-circle-right"></i> Identified hub genes associated with Huntington’s disease and analyzed their interrelationships.</p>
+        <p><i class="fas fa-arrow-circle-right"></i> Proposed potential biomarkers for Huntington’s disease based on genetic analysis.</p>
+        <!-- </br> -->
+        <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
+      </div>
+      <!-- <div class="resume-date text-md-right"> -->
+      <!-- </div> -->
+    </div>
+
+
+    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+      <div class="resume-content mr-auto">
+        <h3 class="mb-0"><b>• <a href="">fMRI Analysis of Decision‑Making in Gambling Task</a>
+        </a></b></h3>
+        <div class="subheading mb-3">National Brain Mapping Lab (NBML)</div>
+        <p><i class="fas fa-arrow-circle-right"></i> Analyzed fMRI data from 30 participants performing a gambling task with 100 trials to identify neural correlates of reward‑based decision‑making</p>
+        <p><i class="fas fa-arrow-circle-right"></i> Applied SPM in MATLAB to examine brain regions involved in outcome processing for win/loss feedback.</p>
+        <!-- </br> -->
+        <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
+      </div>
+      <!-- <div class="resume-date text-md-right"> -->
+      <!-- </div> -->
+    </div>
+
+
+    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+      <div class="resume-content mr-auto">
         <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/srrnabased-cancer-vaccinespptx-b6b8">srRNA‑based Cancer Vaccines</a>
         </a></b></h3>
-        <div class="subheading mb-3">Genetic in-course exercise</div>
-        <p><i class="fas fa-arrow-circle-right"></i>  Explored various methods of cancer vaccine development.</p>
-        <p><i class="fas fa-arrow-circle-right"></i>  Conducted research on self‑replicating RNA cancer vaccine types, with a focus on therapeutic vaccines targeting HPV.</p>
+        <div class="subheading mb-3">Genetics in-course exercise</div>
+        <p><i class="fas fa-arrow-circle-right"></i>  Investigated self‑replicating RNA cancer vaccines, focusing on therapeutic vaccines targeting HPV.
+        </p>
+        <p><i class="fas fa-arrow-circle-right"></i>  Explored various methods of cancer vaccine development, evaluating their potential in immunotherapy.</p>
         <!-- </br> -->
         <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
       </div>
@@ -376,8 +407,8 @@
         <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/genetic-engineeringpptx-260412445">Genetic Engineering</a>
         </a></b></h3>
         <div class="subheading mb-3">Genetic Engineering in-course exercise</div>
-        <p><i class="fas fa-arrow-circle-right"></i>  Conducted research on recombinant vaccines.</p>
-        <p><i class="fas fa-arrow-circle-right"></i>  Explored methods of gene therapy and assessed their efficiency for treating cancer and inherited diseases.</p>
+        <p><i class="fas fa-arrow-circle-right"></i>  Conducted research on recombinant vaccines and their application in gene therapy.</p>
+        <p><i class="fas fa-arrow-circle-right"></i>  Assessed the efficiency of gene therapy methods for treating cancer and inherited diseases.</p>
         <!-- </br> -->
         <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
       </div>
@@ -388,24 +419,7 @@
       <!-- </div> -->
     </div>
 
-
-
-
-    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-      <div class="resume-content mr-auto">
-        <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/slideshow/huntington-disease-and-it-s-related-genes/271122132">Huntington's Disease and Its Related Genes</a>
-        </a></b></h3>
-        <div class="subheading mb-3">System Biology in‑course exercise</div>
-        <p><i class="fas fa-arrow-circle-right"></i> Identified hub genes associated with Huntington's disease and analyzed their interrelationships.</p>
-        <p><i class="fas fa-arrow-circle-right"></i> Indicated potential genes that could serve as biomarkers for Huntington's disease.</p>
-        <!-- </br> -->
-        <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
-      </div>
-      <!-- <div class="resume-date text-md-right"> -->
-      <!-- </div> -->
-    </div>
     
-
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
