--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                       <div class="flex-grow-1">
                         <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Teaching Assistant at <a href="http://usc.ac.ir/en">the University of Science and Culture</a></h3>
-                        <p><i class="fas fa-thumbtack"></i>  Cellular and Molecular Biology2 course.</p>
-                        <p><i class="fas fa-thumbtack"></i>  Genetics course.</p>
+                        <p><i class="fas fa-thumbtack"></i>  Cellular and Molecular Biology2 course (T.A.)</p>
+                        <p><i class="fas fa-thumbtack"></i>  Genetics course (T.A.)</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021 - Jan. 2023</span></div>
                 </div>
