--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
   <div class="resume-content mr-auto">
       <h3 class="mb-0"><i class="fas fa-desktop"></i>  Computer Skills</h3>
   </br>
-      <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> Microsoft Office(Excel, Word, PowerPoint), Mendeley, RStudio, SPSS, GeneRunner, L<sup>A</sup>T<sub>E</sub>X</span></p>
+      <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> RStudio, MATLAB, Psychophysics Toolbox (Psychtoolbox), EEGLAB, SPSS, GeneRunner, MEGA, L<sup>A</sup>T<sub>E</sub>X, Mendeley, Microsoft Office (PowerPoint, Excel, Word)</span></p>
   </div>
   </div>
 
@@ -328,7 +328,7 @@
       <div class="resume-content mr-auto">
           <h3 class="mb-0"><i class="fa-solid fa-flask"></i>  Laboratory Techniques</h3>
       </br>
-          <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> PCR/qPCR, DNA/RNA Extraction, Recombinant DNA, Immunofluorescence, Bacterial Culture, Western Blotting, Spectrophotometry, Gel Electrophoresis, Microarray, Primer Design, Buffer Preparation</p>
+          <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> CRISPR, Primer Design, PCR/qPCR, DNA/RNA Extraction, Recombinant DNA, Immunofluorescence, Bacterial Culture, Western Blotting, Spectrophotometry, Gel Electrophoresis, Microarray, Primer Design, Buffer Preparation</p>
       </div>
   </div>
   
