--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                           <div><i class="fas fa-graduation-cap"></i> <b>Genetics<b></div>
                         <p><i class="far fa-list-alt"></i> Current GPA: <b>18.62/20 (3.90/4)</b>
                         <p><i class="far fa-list-alt"></i>  <b>Thesis:</b> "Maturation of hESC-Derived Dopaminergic Progenitors by a Small Molecule Approach"
-                        <p><i class="far fa-list-alt"></i>  Supervisor: <a href="https://scholar.google.com/citations?user=c0RWRSYAAAAJ&hl=en"><b>Dr. Hossein Baharvand</a><b>
+                        <p><i class="far fa-list-alt"></i>  Supervisor: <a href="https://scholar.google.com/citations?user=c0RWRSYAAAAJ&hl=en"><b>Prof. Hossein Baharvand</a><b>
 
                       </div>
                       <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2023 - Present</span></div>
