--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                       <div class="flex-grow-1">
-                          <h3 class="mb-0"><i class="fa fa-university"></i> University of Science and Culture/ Royan Institute</h3>
+                          <h3 class="mb-0"><i class="fa fa-university"></i> University of Science and Culture</h3>
                           <div class="subheading mb-3"> Department of Genetics</a></br>Master of Science</div>
                           <!-- <div class="subheading mb-3">Master of Science</div> -->
                           <div><i class="fas fa-graduation-cap"></i> <b>Genetics<b></div>
@@ -162,7 +162,7 @@
 
 
 
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0"><i class="fas fa-school"></i> Tazkieh High School</h3>
                             <div class="subheading mb-3">Diploma Degree</div>
@@ -170,7 +170,7 @@
                             <p><i class="far fa-list-alt"></i> GPA: <b>18.55/20 (4/4)</b></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2018 - Jun 2019</span></div>
-                    </div>
+                    </div> -->
                 </div>
             </section>
             <hr class="m-0" />
@@ -182,39 +182,39 @@
             <section class="resume-section" id="interests">
               <div class="resume-section-content">
                 <h2><img src="assets/img/project-icon.jpg" alt="projects" width="60" height="60" style="vertical-align:middle;margin-bottom:15px; margin-left: -25px;"><b> Publications</b></h2>
-                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
                     <h3 class="mb-0"><b>• <a>Neural Correlates of Feedback Magnitude Variation during a Monetary Gambling Task: An fMRI Study (In  Preparation)</a>
                     </a></b></h3>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2024 - Present</span></div>
-                    <div class="subheading mb-3"><a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">A. M. Mohammadi</a>, Sh. Mahmoudi, <a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">E. Ebrahimzadeh</a>, <a href="https://scholar.google.com/citations?user=Lc1LZWIAAAAJ">H. Soltanian-Zadeh</a></div>
+                    <div class="subheading mb-3"><a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">A. M. Mohammadi</a>, Sh. Mahmoudi, <a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">E. Ebrahimzadeh</a>, <a href="https://scholar.google.com/citations?user=Lc1LZWIAAAAJ">H. Soltanian-Zadeh</a></div> -->
                     <!-- </br> -->
                     <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
-                  </div>
+                  <!-- </div> -->
                   <!-- <div class="resume-date text-md-right"> -->
                   <!-- </div> -->
-                </div>
+                <!-- </div> -->
 
 
-                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
                     <h3 class="mb-0"><b>• <a>Unraveling the Neuroscience of Choice: The Impact of Winning or Losing Monetary Rewards of Varying Magnitudes
                       on Brain Activity during Decision‑Making; Insights from a Simultaneous EEG‑fMRI Experiment. (Submitted to Fron‑
                       tiers in Human Neuroscience)</a>
                     </a></b></h3>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2024</span></div>
-                    <div class="subheading mb-3"><a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">A. M. Mohammadi</a>, Sh. Mahmoudi, <a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">E. Ebrahimzadeh</a>, <a href="https://scholar.google.com/citations?user=Lc1LZWIAAAAJ">H. Soltanian-Zadeh</a></div>
+                    <div class="subheading mb-3"><a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">A. M. Mohammadi</a>, Sh. Mahmoudi, <a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">E. Ebrahimzadeh</a>, <a href="https://scholar.google.com/citations?user=Lc1LZWIAAAAJ">H. Soltanian-Zadeh</a></div> -->
                     <!-- </br> -->
                     <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
-                  </div>
+                  <!-- </div> -->
                   <!-- <div class="resume-date text-md-right"> -->
                   <!-- </div> -->
-                </div>
+                <!-- </div> -->
 
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
-                    <h3 class="mb-0"><b>• <a>Prevalence of AZF Microdeletions in Men with Oligo- or Azoospermia: A Retrospective Study at the Royan Institute (In  Preparation)</a>
+                    <h3 class="mb-0"><b>• <a>Prevalence of AZF Microdeletions in Men with Oligo- or Azoospermia: A Retrospective Study (In  Preparation)</a>
                     </a></b></h3>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Aug. 2024 - Present</span></div>
                     <div class="subheading mb-3">Sh. Mahmoudi, <a href="https://www.researchgate.net/profile/Hesamoddin-Sajadi">Dr. Hesamoddin Sajadi</a>, <a href="https://scholar.google.com/citations?user=7vX9bV4AAAAJ&hl=en">Dr. Reza Omani-Samani</a></div>
@@ -239,7 +239,7 @@
 
                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Research Assistant at <a href="https://www.royan.org/en/">Royan Institute</a></h3>
+                        <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Research Assistant at the <a href="http://usc.ac.ir/en">University of Science and Culture</a></h3>
                         <p><i class="fas fa-thumbtack"></i> Cultured and differentiated stem cells into dopaminergic progenitors to advance therapeutic research in neurodegenerative diseases.</p>
                         <p><i class="fas fa-thumbtack"></i> Performed precise gene expression analysis using PCR and qPCR techniques, ensuring high accuracy in quantifying genetic markers.</p>
                         <p><i class="fas fa-thumbtack"></i> Executed immunocytochemical analyses withtargeted antibodies, providing clear visualization of protein interactions critical to understanding cellular mechanisms.</p>
@@ -250,7 +250,7 @@
 
                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                       <div class="flex-grow-1">
-                          <h3 class="mb-0"><i class="fas fa-laptop-code"></i>   Biomedical Data Acquisition Specialist & Research Assistant at <a href="https://nbml.ir/en">National Brain Mapping Lab (NBML)</a></h3>
+                          <h3 class="mb-0"><i class="fas fa-laptop-code"></i> Research Assistant at <a href="https://nbml.ir/en">National Brain Mapping Lab (NBML)</a></h3>
                           <p><i class="fas fa-thumbtack"></i>  Collaborated on a neurocognitive research project focused on understanding reward processing, dopaminergic responses, and error monitoring within the brain’s decision‑making mechanisms.</p>
                           <p><i class="fas fa-thumbtack"></i>  EEG and FMRI experiment task designing with Psychtoolbox.</p>
                           <p><i class="fas fa-thumbtack"></i>  Acquired high‑density EEG signals (32 to 128 channels) across various setups, including simultaneous EEG‑fMRI, EEG‑TMS, EEG‑EMG, EEG‑VR, and EEG‑EOG sessions.</p>
@@ -273,11 +273,11 @@
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="flex-grow-1">
-                    <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Teaching Assistant at <a href="https://www.royan.org/en">Royan Institute</a></h3>
+                    <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Teaching Assistant at <a href="http://usc.ac.ir/en">University of Science and Culture</a></h3>
                     <p><i class="fas fa-thumbtack"></i>  Genetic Engineering course (Chief T.A.) </p>
                     <p><i class="fas fa-thumbtack"></i>  Bioethics course (Chief T.A.)</p>
                 </div>
-                <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2024 - Present</span></div>
+                <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2024 - Feb. 2025</span></div>
             </div>
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
               <div class="flex-grow-1"> 
