--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </h1>
 
                     <div class="subheading mb-5">
-                        Department of Genetics</a>, <a href="http://usc.ac.ir/en">University of Science and Culture</a>/ <a href="https://www.royan.org/en/">Royan Institute</a>, Tehran, Iran <p> <i class="fas fa-mobile-alt"></i> (+98) 933-798-6217  </p>
+                        Department of Genetics</a>, <a href="http://usc.ac.ir/en">University of Science and Culture</a>, Tehran, Iran <p> <i class="fas fa-mobile-alt"></i> (+98) 933-798-6217  </p>
                     <!-- </br>  -->
                     <!-- <b>   .   </b> -->
                     <a href="mailto:shaqayeqmhmoudi@gmail.com"><i class="far fa-envelope"></i> shaqayeqmhmoudi@gmail.com</a>
@@ -535,11 +535,11 @@
             <h3 class="mb-0"><b>• Seminars
             </a></b></h3>
           </br>
-            <p><i class="fas fa-arrow-circle-right"></i>  <b>“International Summer School on Genome Editing”</b> - <a href="https://www.royan.org/en/">Royan Institute</a>  <b>(<a href="https://drive.google.com/file/d/1oI-XlWLDPWtHbpW-wupj9nNkkqVAbrm3/view?usp=drive_link">Certificate</a>)</b></p>
+            <!-- <p><i class="fas fa-arrow-circle-right"></i>  <b>“International Summer School on Genome Editing”</b> - <a href="https://www.royan.org/en/">Royan Institute</a>  <b>(<a href="https://drive.google.com/file/d/1oI-XlWLDPWtHbpW-wupj9nNkkqVAbrm3/view?usp=drive_link">Certificate</a>)</b></p> -->
             <p><i class="fas fa-arrow-circle-right"></i>  <b>“BCI \& Neurotechnology Spring School”</b> - <a href="https://ut.ac.ir/en/">University of Tehran</a>  <b>(<a href="https://drive.google.com/file/d/1ayNEt0P25ypC0TPP7EXigRCUfvC0ZlH8/view?usp=drive_link">Certificate</a>)</b></p>
             <p><i class="fas fa-arrow-circle-right"></i>  <b>“Visual Neuroscience”</b> - <a href="https://www.gtec.at/">g.tec medical engineering GmbH</a>  <b>(<a href="https://drive.google.com/file/d/1h9-YoB8uCycD2LUgiM3qAxlhJCmByqHs/view?usp=drive_link">Certificate</a>)</b></p>
             <p><i class="fas fa-arrow-circle-right"></i>  <b>“Second International and Forth National CRISPR Symposium”</b> - <a href="http://www.nigeb.ac.ir/web/en/home">NIGBE</a>  <b>(<a href="https://drive.google.com/file/d/1MTDKzTojaP8_pFDAoFAKYNV9bDF1Z5zE/view?usp=drive_link">Certificate</a>)</b></p>
-            <p><i class="fas fa-arrow-circle-right"></i>  <b>“Cryobiology in Organs and Sexual Samples”</b> - <a href="https://www.royan.org/en/">Royan International Education Center(RIEC)</a>  <b>(<a href="https://drive.google.com/file/d/1nWctG5_0Mmu2209-qIxrPwfD8M5i7EcU/view?usp=drive_link">Certificate</a>)</b></p>
+            <!-- <p><i class="fas fa-arrow-circle-right"></i>  <b>“Cryobiology in Organs and Sexual Samples”</b> - <a href="https://www.royan.org/en/">Royan International Education Center(RIEC)</a>  <b>(<a href="https://drive.google.com/file/d/1nWctG5_0Mmu2209-qIxrPwfD8M5i7EcU/view?usp=drive_link">Certificate</a>)</b></p> -->
             <p><i class="fas fa-arrow-circle-right"></i>  <b> “mRNA Technology in Research and Medicine”</b> - <a href="https://biologyevents.ir/">Iranian Biologists Union</a>  <b>(<a href="https://drive.google.com/file/d/116M8TWNDlVTZUphycxs2R7VjzAzhy4ab/view?usp=drive_link">Certificate</a>)</b></p>
             <p><i class="fas fa-arrow-circle-right"></i>  <b>“Microorganisms in Health and Disease”</b> - <a href="https://biologyevents.ir/">Union of Biology Students of Iran</a>  <b>(<a href="https://drive.google.com/file/d/1TAS8nRiT4cEFJ7atTVbxPLzLI6VgALM8/view?usp=drive_link">Certificate</a>)</b></p>
           </div>
@@ -570,7 +570,7 @@
                     <h2><img src="assets/img/Honors_Awards_logo.jpeg" alt="AWARDS" width="60" height="60" style="vertical-align:middle;margin-bottom:15px; margin-left: -25px;"><b> Honors &amp; Awards</b></h2>
                     <!-- <h2 class="mb-5">Honors & Awards</h2> -->
                     <ul class="fa-ul mb-0">
-                        <li>
+                        <!-- <li>
                             <div class="resume-item d-flex flex-column flex-md-row mb-1">
                                 <div class="resume-content mr-auto">
                                     <span class="fa-li lead mb-0"><i class="fas fa-trophy text-warning"></i></span>
@@ -580,18 +580,14 @@
                                   <span class="text-primary"><i class="far fa-calendar-alt"></i> Nov. 2022 - Present</span>
                                 </div>
                             </div>
-                            <!-- <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup> -->
-                            <!-- Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category) -->
-                        </li></br>
+                        </li></br> -->
 
 
                         <li>
                             <div class="resume-item d-flex flex-column flex-md-row mb-1">
                                 <div class="resume-content mr-auto">
                                     <span class="fa-li lead mb-0"><i class="fas fa-trophy text-warning"></i></span>
-                            <p class="lead mb-0">Received University of Science and Culture <b>`Straight' M.Sc. Admission offer</b> as an <b>exceptional talented student</b> and exempted from taking the university entrance exam.</p>
+                            <p class="lead mb-0">Received University of Science and Culture <b>`Straight' M.Sc. Admission offer</b>.</p>
                                 </div>
                                 <div class="resume-date text-md-right">
                                   <span class="text-primary"><i class="far fa-calendar-alt"></i> Jul. 2023</span>
