--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
 
 
             <!-- Interests-->
-            <section class="resume-section" id="interests">
+            <!-- <section class="resume-section" id="interests">
               <div class="resume-section-content">
-                <h2><img src="assets/img/project-icon.jpg" alt="projects" width="60" height="60" style="vertical-align:middle;margin-bottom:15px; margin-left: -25px;"><b> Publications</b></h2>
+                <h2><img src="assets/img/project-icon.jpg" alt="projects" width="60" height="60" style="vertical-align:middle;margin-bottom:15px; margin-left: -25px;"><b> Publications</b></h2> -->
                 <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
                     <h3 class="mb-0"><b>• <a>Neural Correlates of Feedback Magnitude Variation during a Monetary Gambling Task: An fMRI Study (In  Preparation)</a>
