--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                   <!-- </div> -->
                 <!-- </div> -->
 
-
+<!-- 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
                     <h3 class="mb-0"><b>• <a>Prevalence of AZF Microdeletions in Men with Oligo- or Azoospermia: A Retrospective Study (In  Preparation)</a>
@@ -225,7 +225,7 @@
                   <!-- </div> -->
                 </div>
               </div>
-          </section>
+          </section> -->
 
 
 
