--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       <div class="resume-content mr-auto">
           <h3 class="mb-0"><i class="fa-solid fa-flask"></i>  Laboratory Techniques</h3>
       </br>
-          <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> CRISPR, Primer Design, PCR/qPCR, DNA/RNA Extraction, Recombinant DNA, Immunofluorescence, Bacterial Culture, Western Blotting, Spectrophotometry, Gel Electrophoresis, Microarray, Primer Design, Buffer Preparation</p>
+          <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> Primer Design, PCR/qPCR, DNA/RNA Extraction, Recombinant DNA, Immunofluorescence, Bacterial Culture, Western Blotting, Spectrophotometry, Gel Electrophoresis, Microarray, Primer Design, Buffer Preparation</p>
       </div>
   </div>
   
