--- a/index.html
+++ b/index.html
@@ -406,9 +406,9 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
-        <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/genetic-engineeringpptx-260412445">Genetic Engineering</a>
+        <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/genetic-engineeringpptx-260412445">Genetics</a>
         </a></b></h3>
-        <div class="subheading mb-3">Genetic Engineering in-course exercise</div>
+        <div class="subheading mb-3">Genetics in-course exercise</div>
         <p><i class="fas fa-arrow-circle-right"></i>  Conducted research on recombinant vaccines and their application in gene therapy.</p>
         <p><i class="fas fa-arrow-circle-right"></i>  Assessed the efficiency of gene therapy methods for treating cancer and inherited diseases.</p>
         <!-- </br> -->
